force-app/main/default/objects/Monthly_Transaction__c/Monthly_Transaction__c.object-meta.xml
<CustomObject>
    <label>Monthly Transaction</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Monthly Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>