force-app/main/default/objects/Monthly_Transaction__c/fields/Balance_On_Close__c.field-meta.xml
<CustomField>
    <fullName>Balance_On_Close__c</fullName>
    <label>Balance On Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>