force-app/main/default/objects/Monthly_Transaction__c/fields/Max_DD__c.field-meta.xml
<CustomField>
    <fullName>Max_DD__c</fullName>
    <label>Max DD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>