force-app/main/default/objects/Monthly_Transaction__c/fields/Month_Start_Price__c.field-meta.xml
<CustomField>
    <fullName>Month_Start_Price__c</fullName>
    <label>Month Start Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>