force-app/main/default/objects/Monthly_Transaction__c/fields/Number_Of_Trades_RU__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Trades_RU__c</fullName>
    <label>Number Of Trades RU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>