force-app/main/default/objects/Monthly_Transaction__c/fields/Percentage_Change__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Change__c</fullName>
    <formula>Profit__c /  Month_Start_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>