force-app/main/default/objects/Monthly_Transaction__c/fields/Profit_Percentage_RU__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percentage_RU__c</fullName>
    <formula>Profit_RU__c / Month_Start_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Percentage RU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>