force-app/main/default/objects/Monthly_Transaction__c/fields/Trading_Account__c.field-meta.xml
<CustomField>
    <fullName>Trading_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monthly Transactions</relationshipLabel>
    <relationshipName>Monthly_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>