force-app/main/default/objects/Monthly_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Profit_RU__c</columns>
    <columns>Trading_Account__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Balance_On_Close_RU__c</columns>
    <columns>Month_Start_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>